# Qubit-Discovery

./: .gitignore  BFGS.py  LICENSE  PSO.py  PSO_classes.py  README.md  SGD.py  __init__.py  analyze.py  fluxonium_100.sbatch  functions.py  loss.py  optimize.py  optimize_circuit.py  plot_results.py  plot_utils.py  process.sh  pso_classes.py  pypi-readme.md  pyproject.toml  ram_test.py  requirements.txt  settings.py  test_run.sbatch  truncation.py
.github/workflows/: pypi.yml  test.yml
qubit_discovery/: __init__.py
qubit_discovery/losses/: T2_functions.py  __init__.py  functions.py  loss.py  utils.py
qubit_discovery/optim/: BFGS.py  __init__.py  exceptions.py  optim.py  sampler.py  truncation.py  utils.py
qubit_discovery/optimization/: BFGS.py  BFGS_torch.py  PSO.py  SGD.py  __init__.py  exceptions.py  optim.py  reparameterization.py  run_optimization.py  sampler.py  truncation.py  utils.py
qubit_discovery/tests/: conftest.py  pytest.ini  test_BFGS.py  test_BFGS_new.py  test_SGD.py  test_SGD_new.py  test_T2_grad.py  test_functions.py  test_functions_grad.py  test_sampler.py  test_truncation.py
qubit_discovery/utils/: sampler.py  sampler_new.py
scripts/: alex.yaml  analysis.py  calibrate_convergence.py  calibrate_convergence_2.py  circuit_summary.py  circuit_summary_new.py  convergence_test.py  convergence_test_low_res.py  convergence_test_simple.py  defaults.yaml  inout.py  optimize.py  optimize_circuit.py  optimize_new.py  plot_analysis.py  plot_circuit.py  plot_records.py  plot_results.py  plot_results_new.py  plot_utils.py  settings.py  tabulate.py  test_convergence_test.py  utils.py
tutorials/: QD_advanced-features.ipynb  QD_overview.ipynb  QD_transmon-optim.ipynb  optim_data-max.yaml  optim_data-min.yaml  parallel_optimization.md
