[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "qubit_discovery"
version = "0.0.1"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.23",
    "torch>=1.12",
    "scipy>=1.10",
    "joblib",
    "SQcircuit",
    "dill>=0.3.5.1",
    "matplotlib>=3.5.2"
]